@@ -1,6 +1,10 @@
 2005-08-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
     Move more tests out of classes.
+    * Source/QueryParser/QueryHandler.m:
+    Use LCWildcardQuery to handle all wildcard symbol
+    according to the "Query Parser Syntax"
+    (http://lucene.apache.org/java/docs/queryparsersyntax.html).
 
 2005-08-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
